--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-
+*{
+  font-family:'Courier New', Courier, monospace;
+}
 :root {
   --font-base: "DM Sans", sans-serif;
 
