--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -85,6 +85,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin-left: 6rem;
     align-items: flex-start;
 
     div{
@@ -130,10 +131,15 @@
         }
     }
 
+    @media screen and (max-width: 1170px) {
+        margin-top: 6rem;
+        width: 70%; 
+        
+    }
+
     @media screen and (max-width: 1200px) {
         flex-direction: row;
         flex-wrap: wrap;
-        
     }
 
 }
