--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,5 +1,8 @@
 .home_special{
     background: url('../../assets/bgIMG.png');
+    // background: url('../../assets/bgIMG.png');
+    background-size: cover;
+    background-repeat: repeat;
 }
 
 .app__header{
@@ -9,9 +12,7 @@
     flex-wrap: wrap !important;
     flex-direction: row;
     padding: 6rem 2rem 0;  
-    background: url('../../assets/bgIMG.png');
-    background-size: cover;
-    background-repeat: repeat;
+  
     
     @media screen and (min-width: 2000px) {
         padding-top: 8rem;
@@ -43,10 +44,16 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
 
+    @media screen and (max-width: 700px) {
+        justify-content: flex-end;
+        align-items: flex-end;
+        margin-bottom: 1rem;
+    }
+    
 }
 
 .badge-cmp, .tag-cmp{
@@ -147,6 +154,22 @@
     @media screen and (max-width: 1200px) {
         flex-direction: row;
         flex-wrap: wrap;
+    }  
+    @media screen and (max-width: 650px) {
+        flex-direction: row;
+        div:nth-child(1){
+            width: 100px;
+            height: 100px;
+        }
+        div:nth-child(2){
+            margin: 1.75rem;
+            width: 100px;
+            height: 100px;
+        }
+        div:nth-child(3){
+            width: 100px;
+            height: 100px;
+        }
     }
 
 }
