--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,5 +1,5 @@
 .home_special{
-    background: url('../../assets/bgIMG.png');
+    background: url('../../assets/bgIMG.jpg');
     // background: url('../../assets/bgIMG.png');
     background-size: cover;
     background-repeat: repeat;
