--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
   background-color: var(--primary-color);
 }
 
-.app__container {
+.app__container { 
   width: 100%;
   min-height: 100vh;
 
@@ -27,6 +27,7 @@
 
 .app__wrapper {
   
+
   width: 100%;
   flex-direction: column;
   padding: 4rem 2rem;
@@ -52,29 +53,29 @@
 }
 
 .head-text {
-  font-size: 2.65rem;
+  font-size: 6.5rem;
   font-weight: 800;
-  text-align: center;
-  color: var(--black-color);
-  text-transform: capitalize;
+  // text-align: center;
+  color: white;
+  // text-transform: capitalize;
 
   span {
     color: var(--secondary-color);
   }
 
   @media screen and (min-width: 2000px) {
-    font-size: 4rem;
+    // font-size: 4rem;
   }
 
   @media screen and (max-width: 450px) {
-    font-size: 2rem;
+    // font-size: 2rem;
   }
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   text-align: left;
-  color: var(--gray-color);
+  color:white;
   line-height: 1.5;
 
   @media screen and (min-width: 2000px) {
@@ -153,6 +154,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+//  background: url('./assets/bgIMG.jpg');
+
 
   padding: 1rem;
 
@@ -160,7 +163,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #cbcbcb;
+    background-color: aliceblue;
     margin: 0.5rem;
 
     transition: background-color 0.2s ease-in-out;
