--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,17 +1,21 @@
 .home_special{
     background: url('../../assets/bgIMG.jpg');
-    // background: url('../../assets/bgIMG.png');
-    background-size: cover;
-    background-repeat: repeat;
+    // background-color: transparent;
+    width: 100%;
+    height: 100vh;
+    object-fit: contain;
+    background-repeat: no-repeat;
+	background-size: cover; 
+	background-position: center center;
+    background-attachment: fixed;
 }
 
 .app__header{
-    width: 100%;
-    height: 100%;
     flex: 1;
     flex-wrap: wrap !important;
     flex-direction: row;
     padding: 6rem 2rem 0;  
+
   
     
     @media screen and (min-width: 2000px) {
@@ -28,11 +32,11 @@
 }
 
 .app__header-info{
-    flex: 0.7;
+    // flex: 0.7;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
+    // flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     width: 100%;
     
@@ -41,10 +45,11 @@
 
 .app__header-badge{
     z-index: 0;
+    align-self: flex-start;
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-direction: column;
 
@@ -64,7 +69,7 @@
     flex-direction: row;
     border-radius: 8px;
     
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    box-shadow: 10px 0px 30px rgba(0,0,1,0.2);
 }
 .badge-cmp{
     span{
@@ -74,10 +79,10 @@
         font-size: 1.5rem;
 
         @media screen and (min-width: 1847px) {
-            font-size: 1rem;
+            // font-size: 1rem;
         }
         @media screen and (max-width: 1514px) {
-            font-size: 1rem;
+            // font-size: 1rem;
         }
     }
 }
@@ -200,3 +205,21 @@
 
 }
 
+.info__line{
+    display: flex;
+    flex-direction: row;
+    margin-top: 21px;
+    justify-content: space-evenly;
+    align-items: center;
+    div{
+        height: 13px;
+        width: 235px;
+        background: rgb(238,41,55);
+        background: linear-gradient(90deg, rgba(238,41,55,1) 0%, rgba(253,29,29,1) 37%, rgba(223,20,163,1) 71%);
+    }
+    span{
+        color: white;
+        font-size: 1rem;
+        
+    }
+}
