--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 *{
-  font-family:'Courier New', Courier, monospace;
+  font-family:'Roboto', sans-serif;
+}
+.section{
+  background-color: white;
 }
 :root {
   --font-base: "DM Sans", sans-serif;
 
-  --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --primary-color: white;
+  --secondary-color: red;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
