--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,13 +1,18 @@
 .home_special{
     background: url('../../assets/bgIMG.jpg');
     // background-color: transparent;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     object-fit: contain;
     background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: center center;
     background-attachment: fixed;
+
+    @media screen and (max-wdth: 480px) {
+        width: 29rem;
+        
+    }
 }
 
 .app__header{
@@ -40,8 +45,20 @@
     height: 100%;
     width: 100%;
     
-
+    @media screen and (max-width: 1300px) {
+        transform: translateX(-265px) translateZ(0px) !important;
+    }
+    @media screen and (max-width: 960px) {
+    transform: translateX(-150px) translateZ(0px) !important;
+    }
+    @media screen and (max-width: 790px) {
+        transform: translateX(0px) translateZ(0px) !important;
+    }
 }
+
+
+
+
 
 .app__header-badge{
     z-index: 0;
@@ -61,7 +78,7 @@
     
 }
 
-.badge-cmp, .tag-cmp{
+.badge-cmp{
     display: flex;
     padding: 1rem 2rem;
     border: var(--white-color);
@@ -75,142 +92,32 @@
     span{
         font-size: 2rem;
     }
+    h1{
+        @media screen and (max-width: 525px) {
+            font-size: 4rem;
+        }
+    }
     p{
         font-size: 1.5rem;
 
-        @media screen and (min-width: 1847px) {
-            // font-size: 1rem;
+        @media screen and (max-width: 525px) {
+            font-size: 1rem;
         }
         @media screen and (max-width: 1514px) {
             // font-size: 1rem;
         }
     }
 }
-.tag-cmp{
-    margin-right: 1rem;
-    margin-top: 1rem;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    p{
-        text-transform: uppercase;
-        font-size: 1rem;
-    }
-}
-
-.app__header-circles{
-    flex: 0.75;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin-left: 6rem;
-    align-items: flex-start;
-
-    div{
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background: var(--white-color);
-        box-shadow: 0 0 20px rgba(0,0,0,0.1);
-
-        img{
-            width: 60%;
-            height: 60%;
-        }
-    }
-
-    div:nth-child(1){
-        width: 100px;
-        height: 100px;
-    }
-    div:nth-child(2){
-        margin: 1.75rem;
-        width: 150px;
-        height: 150px;
-    }
-    div:nth-child(3){
-        width: 70px;
-        height: 70px;
-    }
-
-    @media screen and (min-width: 2000px) {
-        div:nth-child(1){
-            width: 300px;
-            height: 300px;
-        }
-        div:nth-child(2){
-            margin: 1.75rem;
-            width: 250px;
-            height: 250px;
-        }
-        div:nth-child(3){
-            width: 170px;
-            height: 170px;
-        }
-    }
-
-    @media screen and (max-width: 1170px) {
-        margin-top: 6rem;
-        width: 70%; 
-        
-    }
-
-    @media screen and (max-width: 1200px) {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }  
-    @media screen and (max-width: 650px) {
-        flex-direction: row;
-        div:nth-child(1){
-            width: 100px;
-            height: 100px;
-        }
-        div:nth-child(2){
-            margin: 1.75rem;
-            width: 100px;
-            height: 100px;
-        }
-        div:nth-child(3){
-            width: 100px;
-            height: 100px;
-        }
-    }
-
-}
-
-.app__header-img{
-    flex: 1;
-    height: 100%;
-
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    position: relative;
-
-    img{
-        width: 100%;
-        object-fit: contain;
-        z-index: 1;
-    }
-    .overlay_circle{
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 0;
-        width: 100%;
-        height: 90%;
-    }
-
-}
-
 .info__line{
     display: flex;
     flex-direction: row;
     margin-top: 21px;
     justify-content: space-evenly;
     align-items: center;
+    @media screen and (max-width:400px) {
+     flex-direction: column;
+        
+    }
     div{
         height: 13px;
         width: 235px;
@@ -220,6 +127,11 @@
     span{
         color: white;
         font-size: 1rem;
+        @media screen and (max-width:400px) {
+           margin-top: 8px;
+               
+           }
+        
         
     }
 }
