--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   background-color: white;
 }
 body{
-  position: fixed;
+  /* position: fixed; */
 }
 :root {
   --font-base: "DM Sans", sans-serif;
