--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,8 +5,9 @@
     align-items: center;
 
     padding: 0rem 2rem;
+    // background-color: aliceblue;
     backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(2px);
 
     position: fixed;
     z-index: 2;
