--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,63 +1,34 @@
+.about__special{
+    margin-top: -85px;
+}
 
 .app__about{
-    
-    margin-top: 4rem;
-    flex: 1;
-    // height: 100%;
-    width: 100%;
-    flex-direction: column;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.about_text{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
-
-.app__profiles{
-    flex: 1;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 1rem;
-    flex-wrap: wrap;
-
-
-    div{
-        height: 200px;
-        width: 233px;
-        // margin-top: 10rem;
-        margin: 2rem;
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
-        flex-direction: column;
-
-        img{
-            width: 100%;
-            height: 170px;
-            object-fit: cover;
-            border-radius: 15px;
-        }
-
-        h2,p{
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 1.2rem;
-        }
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+   
+    .about__form{
+        width: 50rem;
+        height: 11rem;
+        // outline: 2px solid red;
+        align-self: center;
+        -webkit-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
+        box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
+        background-color: white;
+        // margin-top: -56px;
     }
+}
 
-    @media screen and (min-width: 1800px) {
-        // width: 50rem;
-        margin: 2rem 4rem;
 
-        div{
-        height: 400px;
-        width: 233px;
-        }
+.about__section{
+    height: 60%;
+}
 
-        img{
-            height: 270px;
-        }
-        
-    }
+
+.app__wrapper{
+    padding-top: 0;
 }
