--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -127,15 +127,13 @@
     div{
         height: 13px;
         width: 235px;
-        background: rgb(238,41,55);
-        background: linear-gradient(90deg, rgba(238,41,55,1) 0%, rgba(253,29,29,1) 37%, rgba(223,20,163,1) 71%);
+        background: var(--gradient-shade)
     }
     span{
         color: white;
         font-size: 1rem;
         @media screen and (max-width:525px) {
-           margin-top: 8px;
-               
+           margin-top: 8px;    
            }
         
         
