--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body{
 }
 :root {
   --font-base: "DM Sans", sans-serif;
-
+  --gradient-shade: linear-gradient(90deg, rgba(238,41,55,1) 0%, rgba(253,29,29,1) 37%, rgba(223,20,163,1) 71%);
   --primary-color: white;
   --secondary-color: red;
   --black-color: #030303;
