--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,20 +1,35 @@
 .about__special{
     margin-top: -85px;
+    height: 100vh;
 }
 
 .app__about{
     display: flex;
     height: 100%;
     flex-direction: column;
-    justify-content: space-around;
+    // justify-content: space-around;
     align-items: center;
     width: 100%;
    
     .about__form{
         width: 50rem;
         height: 11rem;
-        // outline: 2px solid red;
-        align-self: center;
+
+        @media screen and (max-width: 950px) {
+            height: 41rem;
+            width: 28rem;
+            
+        }
+        @media screen and (max-width: 500px) {
+            height: 40rem;
+            width: 18rem;
+            border-radius: 15px;
+        
+        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // align-self: center;
         -webkit-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
         box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
@@ -25,7 +40,15 @@
 
 
 .about__section{
-    height: 60%;
+    height: 100%;
+    width: 100%;
+    margin-top: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: space-evenly;
+
+   
 }
 
 
