--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -1,6 +1,76 @@
-.enquire__form{
+.enquiry__form{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 25vw;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    @media screen and (max-width: 950px) {
+        flex-direction: column;
+        height: 15rem;
+        justify-content: space-evenly;
+        align-items: space-evenly;
+        height: 100%;
+        div{
+            margin-top: 14px;
+        }
+    }
+
+   
+
+
+
+
+    div{
+        height: 50px;
+}
+
+label{
+    font-weight: 1000;
+    text-transform: uppercase;
+}
+.btn{
+    // border-radius: 13px;
+    background: var(--gradient-shade);
+    cursor: pointer;
+    height: 36px;
+    width: 120px;
+    color: white;
+    border: 0;
+    text-transform: uppercase;
+    &:hover{
+        background: red
+    }
+    &:focus{
+        border: none;
+    }
+}   
+
+input{
+    margin-top: 10px;
+    border: 0;
+    padding: 2px;
+    border-bottom: 1px solid rgb(173, 172, 172);
+    &:focus{
+        outline: 0;
+    }
+    @media screen and (max-width: 950px) {
+      width: 15rem;
+    }
+    }
+    
+}
+select{
+    border: 0;
+    margin-top: 10px;
+    border-bottom: 1px solid rgb(173, 172, 172);
+    &:focus{
+        outline: 0;
+        border: none;
+    }
+
+    @media screen and (max-width: 950px) {
+        width: 15rem;
+      }
 }
