--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    height: 20rem;
     justify-content: space-evenly;
     align-items: center;
     
