--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 *{
   font-family:'Roboto', sans-serif;
+  /* box-sizing: border-box; */
+  /* flex-wrap: wrap; */
 }
 .section{
   background-color: white;
