--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,11 +1,11 @@
 .about__special{
-    margin-top: -85px;
+    // margin-top: -85px;
     height: 100vh;
 }
 
 .app__about{
     display: flex;
-    height: 100%;
+    // height: 100%;
     flex-direction: column;
     // justify-content: space-around;
     align-items: center;
@@ -16,12 +16,13 @@
         height: 11rem;
 
         @media screen and (max-width: 950px) {
-            height: 41rem;
-            width: 28rem;
+            height: 24rem;
+            width: 24rem    ;
+            border-radius: 15px;
             
         }
-        @media screen and (max-width: 500px) {
-            height: 40rem;
+        @media screen and (max-width: 400px) {
+            height: 20rem;
             width: 18rem;
             border-radius: 15px;
         
