--- a/src/container/About/Aboutcontent.scss
+++ b/src/container/About/Aboutcontent.scss
@@ -2,13 +2,17 @@
     outline: 2px solid black;
     align-self: center;
     margin-top: 15px;
-    height: 100%;
+    height: 48rem;
     width: 100%;
     display: flex;
     flex-direction: row !important;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap-reverse;
+
+    @media screen and (max-width: 1040px) {
+        height: 41rem;
+    }   
 }
 
 .controllers{
@@ -16,21 +20,30 @@
     flex-direction: column;
     // width: 23rem;
     // height: 32rem;
-    width: 20%;
-    height: 87%;
+    width: 27%;
+    height: 70%;
     margin-top: 140px;
     
     @media screen and (max-width: 1040px) {
-            margin-top: 0px;
+        margin-top: 20px;
+        height: 3rem;
+        width: 48%;
     }
     
-
+    
     .main__controller{
         margin-bottom: 21px;
         background-color: white;
         -webkit-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
         -moz-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
         box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
+        
+        
+        @media screen and (max-width: 1040px) {
+                display: none;
+        }
+        
+
 
     button{
         height: 4rem;
@@ -69,11 +82,18 @@
     width: 43%;     
     overflow: hidden;
 
+    @media screen and(max-width: 1400px) {
+        width: 62%;
+        
+    }
     @media screen and (max-width: 1200px) {
-        width: 35rem;
+        width: 63%;
+        // height: 85%;
+        margin-bottom: 0;
     }    
     @media screen and (max-width: 1040px) {
-        margin-bottom: 23px;
+        height: 35rem;
+        width: 100%;
     }    
     
 
