--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -7,7 +7,7 @@
     display: flex;
     // height: 100%;
     flex-direction: column;
-    // justify-content: space-around;
+    height: 100vh;
     align-items: center;
     width: 100%;
    
