--- a/src/container/About/Dropdownbox.scss
+++ b/src/container/About/Dropdownbox.scss
@@ -1,5 +1,16 @@
 
 .dropdown-toggle{
+    background: var(--gradient-shade);
+    border: none;
+    height: 2.4rem;
+    width: 85%;
+    margin: 10px 26px;
+            color: white;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+    border-radius: 7px;
+    font-family:'Roboto', sans-serif;
     width: 100% !important;
 }
 .dropdown-menu{
