--- a/src/components/Heading.scss
+++ b/src/components/Heading.scss
@@ -2,6 +2,13 @@
     align-self: flex-start;
     // height: 30%;
     margin-left: 5rem;
+    margin-bottom: 10px;
+
+    @media screen and (max-width:1400px) {
+        margin-left: 0px;
+        
+    }
+
     span{
         color: black;
         font-weight: bold;
