--- a/src/container/About/Aboutcontent.scss
+++ b/src/container/About/Aboutcontent.scss
@@ -21,7 +21,7 @@
     // width: 23rem;
     // height: 32rem;
     width: 27%;
-    height: 70%;
+    height: 85%;
     margin-top: 140px;
     
     @media screen and (max-width: 1040px) {
@@ -31,6 +31,9 @@
         margin-top: 20px;
         height: 3rem;
         width: 48%;
+    } 
+    @media screen and (max-width: 650px) {
+       width: 80%;
     }
     
     .dropdown{
@@ -52,14 +55,41 @@
         -webkit-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
         -moz-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
         box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.45);
+        
         button{
-        height: 4rem;
+        
+        height: 5rem;
         color: black;
         width: 100%;
         border: 0;
         background: white;
         border-bottom: 0.25px solid rgb(190, 190, 190);
+        cursor: pointer;
+        transition: all 0.25s ease-in;
+        
+        
+        &:focus{
         border-right: 9px solid #c4025c;
+        color: #c4025c;
+        }
+        
+        div{
+            margin-left: 25px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: flex-start;
+            span{
+                font-weight: 400;
+            }
+            h3{
+                font-family: 'roboto';
+                font-weight: 800;
+                margin-bottom: -0.2px;
+            }
+        }
+
+
         }
     
     }
@@ -71,7 +101,7 @@
         border: none;
         height: 2.4rem;
         width: 85%;
-        margin: 10px 26px;
+        margin: 10px 29px;
                 color: white;
         text-transform: uppercase;
         font-size: 1rem;
@@ -84,11 +114,9 @@
 
 .carousel{
     outline: 2px solid rgb(76, 0, 255);
-    margin-bottom: 53px;
-    // height: 448px;
-    // width: 43rem;
-    height: 75%;
-    width: 43%;     
+    // margin-bottom: 53px;
+    height: 95%;
+    width: 33%;     
     overflow: hidden;
 
     @media screen and(max-width: 1400px) {
@@ -105,12 +133,6 @@
         width: 100%;
     }    
     
-
-
-
-
-
-
 }
 .slider{
     outline: 2px solid red;
@@ -119,13 +141,90 @@
 
     
     section{
-        // width: 100%;
         outline: 2px solid green;
-        // flex-basis: 100%;
         height: 16.5%;
-    }
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        
+        @media screen and (max-width: 1040px) {
+            // justify-content: center;
+            align-items: center;
+            
+        }
 
+        div:nth-child(1) {
+
+            height: 45%;
+            width: 76%;
+          
+        @media screen and (max-width: 1040px) {
+               height: 60%;
+            //    width: 60%; 
+            }
+        @media screen and (max-width: 300px) {
+                height: 25% !important;
+                // width: 60%; 
+             }
+        @media screen and (max-width: 550px) {
+                height: 40%;
+                // width: 40%; 
+             }
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+            }
+          }
+
+        div:nth-child(2){
+            margin-left: 4px;
+            margin-top: 8px;
+            display: flex;
+            flex-direction: column;
+            outline: 2px solid red;
+            width: 95%;
+            height: 52%;
+
+            // @media screen and (max-width: 1040px) {
+            //     height: 37%;
+             
+            //  }
+            // @media screen and (max-width: 900px) {
+            //     height: 50%;
+             
+            //  }
+
+            //  @media screen and (max-width: 500px) {
+            //     height: 50%;
+            //     // width: 40%; 
+            //  }
+ 
+        }
+
+    }
 }
-// .tota{
-//     transform: translateY(-100%);
-// }
+
+// FOR FIRST SECTION 
+
+.content__list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 4px;
+    li{
+        // margin-left: 8px;
+        width: 100%;
+    }
+}
+
+.section_1{
+ p{
+     margin-left: 10px;
+     font-weight: 700;
+     color: rgb(210, 18, 104);
+ }
+    
+}
