--- a/src/container/About/Dropdownbox.scss
+++ b/src/container/About/Dropdownbox.scss
@@ -26,3 +26,8 @@
 .btn-success:active:focus, .show>.btn-success.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.25rem rgba(247, 1, 255, 0.5);
 }
+
+.btn{
+    margin: 0;
+    
+}
