--- a/src/App.scss
+++ b/src/App.scss
@@ -100,13 +100,14 @@
 
 .app__social {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
 
   padding: 1rem;
 
   div {
+    cursor: pointer;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -180,8 +181,7 @@
 }
 
 @media screen and (max-width: 625px) {
-  .app__navigation,
-  .app__social {
+  .app__navigation{
     display: none;
   }
 
