--- a/src/container/About/Aboutcontent.scss
+++ b/src/container/About/Aboutcontent.scss
@@ -115,8 +115,8 @@
 .carousel{
     outline: 2px solid rgb(76, 0, 255);
     // margin-bottom: 53px;
-    height: 95%;
-    width: 33%;     
+    height: 75%;
+    width: 43%;     
     overflow: hidden;
 
     @media screen and(max-width: 1400px) {
@@ -135,7 +135,7 @@
     
 }
 .slider{
-    outline: 2px solid red;
+    // outline: 2px solid red;
     height: 610%;
     width: 100%;
 
@@ -150,25 +150,24 @@
         align-items: flex-start;
         
         @media screen and (max-width: 1040px) {
-            // justify-content: center;
             align-items: center;
             
         }
 
         div:nth-child(1) {
 
-            height: 45%;
-            width: 76%;
+            height: 65%;
+            width: 66%;
           
         @media screen and (max-width: 1040px) {
-               height: 60%;
-            //    width: 60%; 
+            height: 65%;
+            width: 90%;
             }
-        @media screen and (max-width: 300px) {
-                height: 25% !important;
-                // width: 60%; 
-             }
-        @media screen and (max-width: 550px) {
+        // @media screen and (max-width: 300px) {
+        //         height: 25% !important;
+        //         // width: 60%; 
+        //      }
+        @media screen and (max-width: 400px) {
                 height: 40%;
                 // width: 40%; 
              }
@@ -184,9 +183,12 @@
             margin-top: 8px;
             display: flex;
             flex-direction: column;
-            outline: 2px solid red;
-            width: 95%;
             height: 52%;
+
+            @media screen and (max-width: 400px) {
+                height: 70%;
+                // width: 40%; 
+             }
 
         }
 
