--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -1,3 +1,108 @@
 .app__footer{
-    height: 80vh;
+    height: 40vh;
+    outline: 2px solid red;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    
+    @media screen and (max-width: 800px) {
+        flex-direction: column;
+        height: 100vh;
+
+        width: 100%;
+        
+    }
+}
+
+.footer__special{
+    margin-left: 0px;    
+    margin-bottom: 50px;
+    margin-top: 20px;
+
+    h1{
+        color: black;
+        font-size: 3rem;
+        font-weight: 1000;
+        
+        @media screen and(max-width:920px) {
+            font-size: 2rem;
+            
+        }
+    }
+
+}
+
+
+.contact__us{
+    outline: 2px solid green;
+    flex-basis: 33%;
+    height: 100%;
+    flex-shrink: 1;
+    padding: 10px;
+
+
+}
+
+.map{
+    outline: 2px solid green;
+    height: 100%;
+    // width: 30%;
+    flex-basis: 33%;
+    flex-shrink: 1;
+}
+
+.contact__info{
+    flex-shrink: 1;
+    outline: 2px solid green;
+    height: 100%;
+    flex-basis: 33%;
+
+    width: 100%;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+
+    .logo{
+        margin-left: 40px;
+        height: 4rem;
+        width: 6rem;
+        // outline: 2px solid rgb(0, 0, 0);
+        img{
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .contact{
+        margin-left: 30px;
+        height: 10rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 10px;
+        
+        .contact_icon{
+            height: 5.3rem;
+            margin: 10px;
+            svg{
+                // height: 10rem;
+                font-size: 1.5rem;
+                margin-right: 20px;
+                color: rgb(255, 64, 89);
+                // line-height: 50px;
+            }
+            span{
+                font-weight: 800;
+            }
+        }
+
+    }
+}
+
+.social_media{
+    width: 19rem;
 }
