--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -34,12 +34,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        // align-self: center;
         -webkit-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
         box-shadow: 0px -3px 40px -5px rgba(0,0,0,0.75);
         background-color: white;
-        // margin-top: -56px;
+        margin-top: -20px;
     }
 }
 
