--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,6 +1,5 @@
 .about__special{
-    // margin-top: -85px;
-    height: 155vh;
+    height: 90rem;
 
     .app__flex{
         justify-content: flex-start;
