--- a/src/App.scss
+++ b/src/App.scss
@@ -104,7 +104,7 @@
   justify-content: space-evenly;
   align-items: center;
 
-  padding: 1rem;
+  // padding: 1rem;
 
   div {
     cursor: pointer;
