Footer and google map

--- a/src/App.scss
+++ b/src/App.scss
@@ -137,13 +137,12 @@
     }
 
     @media screen and (min-width: 2000px) {
-      width: 70px;
-      height: 70px;
-
-      margin: 0.5rem 0;
+      width: 64px;
+      height: 46px;
+      margin: 0.5rem 1rem;
 
       svg {
-        width: 30px;
+        width: 23px;
         height: 30px;
       }
     }
