--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -66,10 +66,6 @@
         height: 80%;
         // width: 40%;
 
-
-       
-
-
     }
 
     a{
@@ -106,7 +102,7 @@
         margin-left: 16px;
         height: 4rem;
         width: 6rem;
-        // outline: 2px solid rgb(0, 0, 0);
+  
         img{
             height: 100%;
             width: 100%;
@@ -127,16 +123,21 @@
             justify-content: flex-start;
             align-items: center;
             height: 5.3rem;
-            // margin: 10px;
+            
             svg{
-                // height: 10rem;
                 font-size: 1.3rem;
                 margin-right: 20px;
                 color: rgb(255, 64, 89);
-                // line-height: 50px;
+
             }
-            span{
+            a{
+                cursor: pointer;
                 font-weight: 800;
+                text-decoration: none;
+                color: black;
+                &:hover{
+                    text-decoration: underline;
+                }
             }
         }
 
