--- a/src/components/Heading.scss
+++ b/src/components/Heading.scss
@@ -17,7 +17,7 @@
     }
     h1{
         color: red;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-family:'Roboto', sans-serif;
         font-size: 3.5rem;
         font-weight: 900;
