--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -1,8 +1,8 @@
 .app__footer{
     z-index: 10;
-    height: 44vh;
-    width: 100vw;
-    outline: 2px solid red;
+    height: 50%;
+    width: 100%;
+    // outline: 2px solid red;
     background-color: white;
     display: flex;
     flex-direction: row;
@@ -11,60 +11,76 @@
     
     @media screen and (max-width: 1040px) {
         flex-direction: column;
-        height: 150vh;
-
-        // width: 100%;
-        
+        height: 100%;     
     }
 }
 
-.footer__special{
+.footer__heading{
     margin-left: 0px;    
     margin-bottom: 50px;
     margin-top: 20px;
-
+    
+    @media screen and(max-width:920px) {
+        margin-bottom: 30px;
+        margin-top: 0px;
+        h1{
+        font-size: 2rem !important;
+        }
+    }
+    
     h1{
         color: black;
         font-size: 3rem;
         font-weight: 1000;
         
-        @media screen and(max-width:920px) {
-            font-size: 2rem;
-            
-        }
+       
     }
 
 }
 
 
 .contact__us{
-    outline: 2px solid green;
-    flex-basis: 33%;
+    // outline: 2px solid green;
+    flex-basis: 45%;
     height: 100%;
     flex-shrink: 1;
     padding: 10px;
+
+    @media screen and(max-width:1040px) {
+        
+            height: 20%;
+
+        
+        
+    }
 
 
 }
 
 .map{
-    outline: 2px solid green;
+    // outline: 2px solid green;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    flex-basis: 33%;
+    flex-basis: 30%;
     flex-shrink: 1;
 
     @media screen and(max-width:1040px) {
         width: 100%;
+        flex-direction: row;
         
+        .google__map{
+            width: 40% !important;
+            height: 85% !important;
+        }
     }
 
     .google__map{
-        height: 80%;
-        // width: 40%;
+        height: 75%;
+        padding: 2px;
+        width: 55%;
 
     }
 
@@ -73,7 +89,16 @@
         color: rgb(255, 64, 89);
         cursor: pointer;
         font-weight: 800;
+        font-size: 1.2rem;
         
+        @media screen and(max-width:430px) {
+            height: 61px;
+    width: 100px;
+    font-size: 1.3rem;
+            
+        }
+
+
         &:hover{
             color: black;
             text-decoration: underline;
@@ -87,10 +112,10 @@
 
 .contact__info{
     flex-shrink: 1;
-    outline: 2px solid green;
+    // outline: 2px solid green;
     height: 100%;
-    flex-basis: 33%;
-
+    flex-basis: 25%;
+    margin-top: 30px;
     width: 100%;
 
     display: flex;
@@ -98,10 +123,19 @@
     justify-content: space-evenly;
     flex-direction: column;
 
+   
+
     .logo{
-        margin-left: 16px;
-        height: 4rem;
-        width: 6rem;
+        margin-left: 26px;
+        height: 5rem;
+        width: 7.5rem;
+
+        @media screen and(max-width:1040px) {
+            height: 4rem;
+            margin-left: 5px;
+            margin-top: 10px;
+            width: 6.5rem;            
+        }
   
         img{
             height: 100%;
@@ -110,12 +144,12 @@
     }
 
     .contact{
-        padding: 10px;
+        padding: 20px;
         height: 14rem;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        margin-top: 15px;
+        // margin-top: 15px;
         
         .contact_icon{
             display: flex;
@@ -145,9 +179,16 @@
 }
 
 .social_media{
-    width: 19rem;
+    width: 15rem;
 }
 
 .phoneNumber,.mail__id{
     margin-left: 5px;
+}
+
+@media screen and(max-width: 490px) {
+    .location_text{
+        font-size: 12px !important;
+    }
+    
 }
