--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -14,51 +14,41 @@
         height: 100%;     
     }
 }
-
-.footer__heading{
-    margin-left: 0px;    
-    margin-bottom: 50px;
-    margin-top: 20px;
+.contact__us{
     
-    @media screen and(max-width:920px) {
-        margin-bottom: 30px;
-        margin-top: 0px;
+    div{
+        margin-left: 0px;    
+        margin-bottom: 50px;
+        margin-top: 20px;
+            @media screen and(max-width:920px) {
+                margin-bottom: 30px;
+                margin-top: 0px;
+                h1{
+                font-size: 2rem !important;
+                }
+             }
         h1{
-        font-size: 2rem !important;
+            color: black;
+            font-size: 3rem;
+            font-weight: 1000;  
         }
     }
-    
-    h1{
-        color: black;
-        font-size: 3rem;
-        font-weight: 1000;
-        
-       
-    }
-
 }
 
-
 .contact__us{
-    // outline: 2px solid green;
     flex-basis: 45%;
     height: 100%;
     flex-shrink: 1;
     padding: 10px;
 
     @media screen and(max-width:1040px) {
-        
             height: 20%;
-
-        
-        
     }
 
 
 }
 
 .map{
-    // outline: 2px solid green;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -93,11 +83,9 @@
         
         @media screen and(max-width:430px) {
             height: 61px;
-    width: 100px;
-    font-size: 1.3rem;
-            
+            width: 100px;
+            font-size: 1.3rem;
         }
-
 
         &:hover{
             color: black;
@@ -106,24 +94,18 @@
     
     }
 
-
-    
 }
 
 .contact__info{
     flex-shrink: 1;
-    // outline: 2px solid green;
     height: 100%;
     flex-basis: 25%;
     margin-top: 30px;
     width: 100%;
-
     display: flex;
     align-items: flex-start;
     justify-content: space-evenly;
     flex-direction: column;
-
-   
 
     .logo{
         margin-left: 26px;
@@ -149,8 +131,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        // margin-top: 15px;
-        
+
         .contact_icon{
             display: flex;
             flex-direction: row;
@@ -169,9 +150,11 @@
                 font-weight: 800;
                 text-decoration: none;
                 color: black;
+                
                 &:hover{
                     text-decoration: underline;
                 }
+
             }
         }
 
@@ -190,5 +173,4 @@
     .location_text{
         font-size: 12px !important;
     }
-    
 }
