--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,5 +1,6 @@
 .home_special{
-    background: url('../../assets/bgIMG.jpg');
+    // background: url('../../assets/bgIMG.jpg');
+    background: url('../../assets/trial_2.jpg');
     // background-color: transparent;
     width: 100vw;
     height: 100vh;
