--- a/src/App.scss
+++ b/src/App.scss
@@ -125,18 +125,19 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: rgb(187, 187, 187);
+    // background-color: rgb(187, 187, 187);
+    background-color: #ff004c;
     margin: 0.5rem;
 
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
-      background-color: var(--secondary-color);
+      background-color: black;
     }
 
     @media screen and (min-width: 2000px) {
-      width: 20px;
-      height: 20px;
+      width: 15px;
+      height: 15px;
     }
   }
 }
