--- a/src/App.scss
+++ b/src/App.scss
@@ -28,17 +28,26 @@
 
 .copyright {
   width: 100%;
-  padding: 2rem 0 0;
-
+  border-radius: 13px;
+  height: 5rem;
+  background-color: whitesmoke;
+  
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
 
-  p {
+ span {
     text-transform: uppercase;
     color: var(--black-color);
+    // font-size: 1.1rem;
+    
   }
+  @media screen and(max-width: 350px) {
+    span{
+    font-size: 12px;
+  }
+}
 }
 
 .head-text {
@@ -118,7 +127,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 1rem;
+  padding: 2rem;
 
 
   .app__navigation-dot {
