--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,10 +1,10 @@
 .home_special{
     // background: url('../../assets/bgIMG.jpg');
-    background: url('../../assets/trial_2.jpg');
-    // background-color: transparent;
+    background: url('../../assets/trial_6(final).jpg');
     width: 100vw;
     height: 100vh;
     object-fit: contain;
+    background-size: 10%;
     background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: center center;
@@ -45,7 +45,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
+    // width: 100%;
     
     @media screen and (max-width: 1300px) {
         transform: translateX(-222px) translateZ(0px) !important;
