--- a/src/container/OurExpert/OurExpert.scss
+++ b/src/container/OurExpert/OurExpert.scss
@@ -1,8 +1,16 @@
-.expet_special{
+.expert_special{
     height: 100vh;
 }
 
-
+.carousel{
+    height: 100% !important;
+}
+.carousel-inner{
+    height: 100% !important;
+    width: 100% !important;
+    border-radius: 30px;
+    box-shadow: 10px 0px 30px rgba(1,1,1,0.3);
+}
 .app__experts{
     height: 100%;
     width: 100%;
@@ -10,7 +18,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    // outline: 2px solid blue;
 
     @media screen and(max-width:800px) {
         
@@ -28,7 +35,6 @@
 .expert_content{
     flex: 55%;
     width: 100%;
-    // outline: 2px solid purple;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -52,13 +58,15 @@
         }
     }
     .main_image{
-        height: 24rem;
-        // outline: 2px solid black;
-        width: 23rem;
-        border-radius: 22px;
-        
+        height: 25rem;
+        width: 25rem;
+
+        @media screen and(max-width:2000px) {
+            height: 22rem;
+            width: 22rem;
+        }
         img{
-            border-radius: 25px;
+            border-radius: 15px;
             height: 100%;
             width: 100%;
             object-fit: cover;
@@ -66,7 +74,11 @@
     }
 
     .content{
-        width: 40%;
+        width: 50%;
+        @media screen and(max-width:1200px) {
+            width: 40%;
+            
+        }
         p{
             text-align: justify;
             font-size: 1.2rem;
@@ -78,7 +90,7 @@
 .expert_points{
     width: 100%;
     flex: 20%;
-    // outline: 2px solid red;
+
     display: flex;
     justify-content: center;
     align-items: center;
