First draft completed

--- a/src/container/About/AboutContent/Aboutcontent.scss
+++ b/src/container/About/AboutContent/Aboutcontent.scss
@@ -1,5 +1,5 @@
 .about__content{
-    outline: 2px solid black;
+    // outline: 2px solid black;
     align-self: center;
     margin-top: 15px;
     height: 48rem;
@@ -113,7 +113,7 @@
 }
 
 .carousell{
-    outline: 2px solid rgb(76, 0, 255);
+    // outline: 2px solid rgb(76, 0, 255);
     height: 75%;
     width: 43%;     
     overflow: hidden;
