--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -3,40 +3,51 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 20rem;
+    height: 100%;
     justify-content: space-evenly;
     align-items: center;
+
     
+    div{
+        height: 50%;
+        width: 20%;
+        }
+
+
     @media screen and (max-width: 950px) {
         flex-direction: column;
-        height: 15rem;
         justify-content: space-evenly;
         align-items: space-evenly;
-        height: 100%;
         div{
             margin-top: 14px;
+            height: 25%;
+            width: 35%;
+        }
+        .button{
+            height: 65% !important; 
+        }
+    } 
+    
+    @media screen and (max-width: 500px) {
+        div{
+            margin-top: 14px;
+            height: 15%;
+            width: 80%;
+        }
+        .button{
+            height: 65% !important; 
         }
     }
-
-   
-
-
-
-
-    div{
-        height: 50px;
-}
 
 label{
     font-weight: 1000;
     text-transform: uppercase;
 }
-.btn{
-    // border-radius: 13px;
+.button{
     background: var(--gradient-shade);
     cursor: pointer;
-    height: 36px;
-    width: 120px;
+    height: 50%;
+    width: 100%;
     color: white;
     border: 0;
     text-transform: uppercase;
