--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -48,13 +48,37 @@
     // width: 100%;
     
     @media screen and (max-width: 1300px) {
-        transform: translateX(-222px) translateZ(0px) !important;
+        transform: translateX(272px) translateZ(0px) !important;
     }
     @media screen and (max-width: 960px) {
-    transform: translateX(-150px) translateZ(0px) !important;
+    transform: translateX(150px) translateZ(0px) !important;
     }
     @media screen and (max-width: 790px) {
+        transform: translateX(150px) translateZ(0px) !important;
+        .badge-cmp{
+            width: 22rem;
+        }
+        .info__line{
+            div{
+
+                height: 10px;
+                width: 134px;
+            }
+
+        }
+        span{
+            font-size: 0.8rem !important;
+        }   
+        h1{
+            font-size: 4rem;
+        }
+        p{
+            font-size: 1rem;
+        }
+    }
+    @media screen and (max-width: 650px) {
         transform: translateX(0px) translateZ(0px) !important;
+        
     }
 }
 
@@ -91,8 +115,7 @@
     box-shadow: 10px 0px 30px rgba(0,0,1,0.2);
 
     @media screen and (max-width: 350px) {
-        width: 17rem;
-        
+        width: 17rem !important;
     }
 }
 .badge-cmp{
@@ -110,15 +133,13 @@
         @media screen and (max-width: 525px) {
             font-size: 1rem;
         }
-        @media screen and (max-width: 1514px) {
-            // font-size: 1rem;
-        }
     }
 }
 .info__line{
     display: flex;
     flex-direction: row;
     margin-top: 21px;
+    width: 100%;
     justify-content: space-evenly;
     align-items: center;
     @media screen and (max-width:525px) {
