--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -86,3 +86,11 @@ select{
         width: 15rem;
       }
 }
+
+#afterSubmit{
+    display: none;
+    width: 80%;
+    text-align: center;
+    font-weight: 800 !important;
+    color: rgb(255, 0, 128);
+}
