--- a/src/container/About/AboutContent/Aboutcontent.scss
+++ b/src/container/About/AboutContent/Aboutcontent.scss
@@ -243,6 +243,7 @@ section{
     // }
     .section__content{
         height: 100%;
+        width: 100%;
         p{
             text-align: justify;
             font-weight: 800;
