--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 0rem 2rem;
     backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(4px);
     position: fixed;
     z-index: 2;
 }
@@ -49,7 +49,7 @@
         }
 
         a{
-            color: rgb(255, 0, 76);
+            color: black;
             text-decoration: none;
             text-transform: uppercase;
             font-weight: 700;
@@ -57,7 +57,7 @@
             transition: all 0.3s ease-out;
             
             &:hover{
-                color: rgb(0, 0, 0);
+                color: rgb(255, 0, 76);
             }
         }
 
