--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -92,10 +92,11 @@
         font-weight: 800;
         font-size: 1.2rem;
         
-        @media screen and(max-width:430px) {
+        @media screen and(max-width:560px) {
             height: 61px;
             width: 100px;
             font-size: 1.3rem;
+            margin-left: 10px;
         }
 
         &:hover{
