--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: center center;
-    background-attachment: fixed;
+    // background-attachment: fixed;
 
 
     @media screen and (max-wdth: 480px) {
