--- a/src/container/About/Enquiry.scss
+++ b/src/container/About/Enquiry.scss
@@ -6,14 +6,15 @@
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
+    // border-radius: 13px;
 
     
     div{
-        height: 50%;
-        width: 20%;
-        }
-
-
+        height: 40%;
+        flex-basis: 20%;
+    }
+    
+    
     @media screen and (max-width: 950px) {
         flex-direction: column;
         justify-content: space-evenly;
@@ -21,7 +22,8 @@
         div{
             margin-top: 14px;
             height: 25%;
-            width: 35%;
+            width: 30%;
+            // flex-basis: 25%;
         }
         .button{
             height: 65% !important; 
@@ -33,6 +35,7 @@
             margin-top: 14px;
             height: 15%;
             width: 80%;
+            flex-basis: 0;
         }
         .button{
             height: 65% !important; 
@@ -40,7 +43,7 @@
     }
 
 label{
-    font-weight: 1000;
+    font-weight: 900;
     text-transform: uppercase;
 }
 .button{
@@ -50,6 +53,7 @@ label{
     width: 100%;
     color: white;
     border: 0;
+    border-radius: 11px;
     text-transform: uppercase;
     &:hover{
         background: red
@@ -68,13 +72,14 @@ input{
         outline: 0;
     }
     @media screen and (max-width: 950px) {
-      width: 15rem;
+      width: 100%;
     }
     }
     
 }
 select{
     border: 0;
+    width: 100%;
     margin-top: 16px !important;
     border-bottom: 1px solid rgb(173, 172, 172);
     &:focus{
@@ -83,7 +88,7 @@ select{
     }
 
     @media screen and (max-width: 950px) {
-        width: 15rem;
+        width: 100%;
       }
 }
 
