--- a/src/container/OurExpert/OurExpert.scss
+++ b/src/container/OurExpert/OurExpert.scss
@@ -39,7 +39,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-
+    
 
     @media screen and(max-width:850px) {
         flex-direction: column;
@@ -51,6 +51,7 @@
         .content{
             width: 100% !important;
 
+            
             p{
                 padding: 24px;
                 font-size: 14.5px !important;
@@ -77,34 +78,90 @@
         width: 50%;
         @media screen and(max-width:1200px) {
             width: 40%;
-            
+        }
+       
+        
+        h1{
+            margin-bottom: 20px;
+            color: red;
+            font-weight: 900;
         }
         p{
             text-align: justify;
             font-size: 1.2rem;
             font-weight: 600;
         }
+
+        @media screen and(max-width:850px) {
+            h1{
+                margin-bottom: 0px;
+                padding: 24px 0 0 24px;
+            }
+        }
     }
     
 }
 .expert_points{
-    width: 100%;
-    flex: 20%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    ul{
-        padding: 2rem !important;
-    li{
-        font-size: 1.2rem;
-        font-weight: 700;
+    @media screen and (max-width: 1860px) {
         
-        @media screen and(max-width:850px) {
-            font-size: 1rem;
-            
+        margin-top: 5rem;
+    }
+
+    @media screen and(max-width: 720px) {
+        flex-direction: column;
+        margin-top: 0px;
+        div{
+            margin-bottom: 10px;
+            width: 80%;
         }
     }
-}
+
+
+    margin-top: 0px;
+    width: 100%;
+    height: 100%;
+    flex: 25%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+
+
+    div{
+        
+        @media screen and (max-width: 1280px) {
+           flex-basis: 30%;
+            padding: 10px;
+        }
+
+        @media screen and (max-width: 840px) {
+            h3{
+                font-size: 1.3em;
+            }
+        }
+
+        flex-basis: 18%;
+        height: 100%;
+        
+
+        h3{
+            color: rgb(255, 0, 106);
+            font-weight: 800;
+        }
+    }
+
+
+    // ul{
+    //     padding: 2rem !important;
+    // li{
+    //     font-size: 1.2rem;
+    //     font-weight: 700;
+        
+    //     @media screen and(max-width:850px) {
+    //         font-size: 1rem;
+            
+    //     }
+    // }
+    // }
 }
