--- a/src/components/Heading.scss
+++ b/src/components/Heading.scss
@@ -1,7 +1,7 @@
 .app__heading{
     align-self: flex-start;
     // height: 30%;
-    margin-left: 5rem;
+    // margin-left: 5rem;
     margin-bottom: 45px;
 
     @media screen and (max-width:1400px) {
