--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -1,22 +1,85 @@
 .main_container{
-    display: none;
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
    flex-wrap: wrap;
    width: 100%;
    height: 100%;
-   outline: 2px solid red;
+//    outline: 2px solid red;
    
+   @media screen and(max-width:795px) {
+    display: none;
 }
 
+}
+
+@media screen and(max-width:800px) {
+        
+    .app__heading{
+        
+        h1{
+            font-size: 2.5rem;
+            
+        }
+    }
+}
+
+
+
 .image{
-    height: 20rem;
-    width: 20rem;
-    outline: 2px solid red;
+    height: 25rem;
+    
+    width: 25rem;
+    @media screen and(max-width:955px) {
+        height: 20rem;
+        width: 20rem;
+
+        
+    }
+    // outline: 2px solid red;
     padding: 10px;
     img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 }
 
+
+.gallery{
+    width: 30em;
+    height: 30em !important;
+
+    @media screen and(max-width:530px) {
+        width: 25em;
+        height: 25em !important;
+    }
+    
+    @media screen and(max-width: 415px) {
+        width: 18em;
+        height: 18em !important;
+    }
+
+    @media screen and(min-width:795px) {
+        display: none;
+    }
+}
+
+
+.carousel-inner{
+    // height: 25rem !important;
+    // width: 25rem !important;
+    // outline: 2px solid black;
+
+    div{
+        height: 100%;
+        width: 100%;
+
+        img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+}
